subida rebollo denada

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,7 @@
   },
   "AppSettings": {
     "Token": "TU_CLAVE_SECRETA_MUY_SEGURA_AQUI"
+    
   },
   "Logging": {
     "LogLevel": {
@@ -11,5 +12,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "AccessKey": "AKIA6OZEWFD6KSENSAEE",
+    "SecretKey": "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",
+    "BucketName": "archivos-academiq",
+    "Region": "us-east-1"
+  }
+
+  
 }
