--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,12 @@
   "AppSettings": {
     "Token": "TU_CLAVE_SECRETA_MUY_SEGURA_AQUI"
   },
+  "AWS": {
+    "AccessKey": "AKIA6OZEWFD6KSENSAEE",
+    "SecretKey": "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",
+    "BucketName": "archivos-academiq",
+    "Region": "us-east-1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
